# checkBitsC

./: CMakeLists.txt  README.md  checkBits.c  comp.sh
cmake/: i686-w64-mingw32.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
